--- a/movie_recommandation_system.ipynb
+++ b/movie_recommandation_system.ipynb
@@ -523,7 +523,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 431
         },
         "id": "CkLrTVevXraI",
         "outputId": "8d7617fd-25e8-4209-f8e6-368790942da1"
@@ -1135,7 +1135,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 729
         },
         "id": "LTSmJI1pfvFn",
         "outputId": "6d297aff-52a1-4f2a-d8c9-15b98f32b5d7"
@@ -1609,7 +1609,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 53
         },
         "id": "BRNKs-2wgk7z",
         "outputId": "f281d324-128a-4032-bfe6-e0c01cfa7aab"
@@ -1715,7 +1715,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 729
         },
         "id": "kLGIhFIcJbHz",
         "outputId": "05d31f03-4672-42b2-8be6-178cd2112dc4"
@@ -2075,7 +2075,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 192
         },
         "id": "3mt1EWW-JpIU",
         "outputId": "6de77228-760b-4714-9d22-6d6ed95f900d"
@@ -2153,7 +2153,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 729
         },
         "id": "8QqYkPCfKDNQ",
         "outputId": "8de98b3d-413f-4208-ee04-c53e9d9c3714"
@@ -2513,7 +2513,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 244
         },
         "id": "gs4x4hEqKFW-",
         "outputId": "37c7d198-20d4-49f1-84da-336c8131411e"
@@ -2611,7 +2611,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 729
         },
         "id": "EbMRyIrHLWZC",
         "outputId": "56737878-a547-4257-b4a0-bcc7fafaeea5"
@@ -2971,7 +2971,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 244
         },
         "id": "G4dFOMv0LYPW",
         "outputId": "662e616a-081f-4e2a-af55-a5c3deb48dc8"
@@ -3066,7 +3066,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 729
         },
         "id": "thijvUtYNQ45",
         "outputId": "c4157321-46e0-4f6a-c0d4-13003113c402"
@@ -3419,7 +3419,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 70
         },
         "id": "LbHppc49NSYK",
         "outputId": "9d611b04-88fc-4228-dfe6-7f6a54dfdbf8"
@@ -3549,7 +3549,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 712
         },
         "id": "dDaVlqgIN0vj",
         "outputId": "1f7a3329-ded1-4926-f49a-84c198ed0b48"
@@ -3953,7 +3953,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 590
         },
         "id": "VRHwuRezRfgC",
         "outputId": "b53e9999-bc03-42b9-aae7-b0d2d3e85b1e"
@@ -4317,7 +4317,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
+          "height": 590
         },
         "id": "KF1lTjiqR8uK",
         "outputId": "573ef1e2-691c-40c4-e4b9-d0e7d1a8c3e9"
@@ -4694,7 +4694,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "YMIvIuNlX7AL",
         "outputId": "e7b1ce88-d67b-4ac6-a9df-8c9490b10cdd"
@@ -5031,7 +5031,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "m4i6aqcFYbce",
         "outputId": "0ca09049-4037-441d-8db6-b0e07af8335b"
@@ -5339,7 +5339,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 122
         },
         "id": "pibJJnHvYy5c",
         "outputId": "14724ccc-0543-4801-eb67-e8033ffaf8b0"
@@ -5397,7 +5397,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "P_DQfP5ZZTsg",
         "outputId": "fbdb076d-3389-41fb-f44d-76cd33a00bfb"
@@ -5936,7 +5936,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 122
         },
         "id": "Ze3U-mvsMRsY",
         "outputId": "aef15d01-3393-4de9-a4aa-a0e441268c16"
@@ -7237,35 +7237,107 @@
     {
       "cell_type": "code",
       "source": [
-        "recommand('Batman Begins')"
+        "recommand('Spider-Man 3')"
       ],
       "metadata": {
-        "id": "C1cCt7SVU1OR",
-        "outputId": "d54676a6-a4c7-4828-edff-0152a6ec448d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C1cCt7SVU1OR",
+        "outputId": "ee622395-bf4e-472a-c462-1c39e6ab4bae"
       },
-      "execution_count": 335,
+      "execution_count": 342,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The Dark Knight\n",
-            "Batman\n",
-            "Batman\n",
-            "The Dark Knight Rises\n",
-            "10th & Wolf\n"
+            "Spider-Man 2\n",
+            "Spider-Man\n",
+            "The Amazing Spider-Man 2\n",
+            "The Amazing Spider-Man\n",
+            "Arachnophobia\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pickle"
+      ],
+      "metadata": {
+        "id": "6DwKSXUCerEt"
+      },
+      "execution_count": 337,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pickle.dump(new_df,open('movies.pkl','wb'))"
+      ],
       "metadata": {
         "id": "2FiIZCD0U3XS"
+      },
+      "execution_count": 338,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df['title'].values    #get teh list of movies"
+      ],
+      "metadata": {
+        "id": "hhecwWJTepBZ",
+        "outputId": "52c4f98e-a649-4077-b989-2ffa71b34bb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 339,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Avatar', \"Pirates of the Caribbean: At World's End\", 'Spectre',\n",
+              "       ..., 'Signed, Sealed, Delivered', 'Shanghai Calling',\n",
+              "       'My Date with Drew'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 339
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pickle.dump(new_df.to_dict(),open('movie_dict.pkl','wb'))"
+      ],
+      "metadata": {
+        "id": "RMl_wH7dnhNN"
+      },
+      "execution_count": 344,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pickle.dump(similarity,open('similarity.pkl','wb'))"
+      ],
+      "metadata": {
+        "id": "hB2SYJT2gWWW"
+      },
+      "execution_count": 343,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4exEGx_UlsO5"
       },
       "execution_count": null,
       "outputs": []
